--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -12,7 +12,6 @@
     padding: 20px;
     box-sizing: border-box;
   }
-  
   .editProfile  .form-flex-container {
     display: flex;
     /* flex-wrap: wrap; */
@@ -32,7 +31,7 @@
   .editProfile  .panel-body .img-thumbnail {
     padding: 20px;
     width: 100%;
-    height: 100%;
+    height: 600px;
     object-fit: cover;
     /* box-flex-group: RED; */
   }
@@ -86,3 +85,4 @@
     padding: 10px 10px;
   }
   }
+
