--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -89,3 +89,17 @@
 
 
 
+::-webkit-scrollbar {
+  width: 10px;
+  height: 50px;
+}
+
+::-webkit-scrollbar-track {
+  background: #ffffff00;
+}
+
+::-webkit-scrollbar-thumb {
+  height: 100px;
+  background: #dedede;
+  border-radius: 20px;
+}
