--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -90,8 +90,8 @@
 
 
 ::-webkit-scrollbar {
+  height: 8px;
   width: 10px;
-  height: 50px;
 }
 
 ::-webkit-scrollbar-track {
@@ -111,7 +111,7 @@
   z-index: 100;
   width: 100%;
   height: 100%;
-  background-color: black;
+  background-color: rgba(0, 2, 18, 0.927);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -123,3 +123,4 @@
   overflow: hidden;
   transition: all 0.3s ease; /* Transition for container */
 }
+
